# financial_calculator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  calculator.cpp  calculator.hpp  calculator.ui  calculator_window.ui  keypad.ui  main.cpp
app/: CMakeLists.txt  calculator.cpp  calculator.hpp  calculator.ui  main.cpp
core/: CMakeLists.txt  algo.hpp  calc_helper_functions.hpp  chart_series.cpp  chart_series.hpp  currency_conversion.cpp  currency_conversion.hpp  token.cpp  token.hpp
test/: CMakeLists.txt  algo_test.cpp  chart_series_test.cpp  math_test.cpp  test.cpp  test_helpers.hpp  token_test.cpp
util/: format.sh
